Header.JS - TEAF 80 - Stop scrolling when menu is open on mobile

--- a/tailwind.css
+++ b/tailwind.css
@@ -17,7 +17,8 @@
     height: 100vh;
     width: 100vw;
     transform: translateX(100%);
-    transition: transform 0.25s ease-in-out;
+    background-color: transparent;
+    transition: transform 0.125s ease-in-out;
   }
 
   #mobile-menu.open {
@@ -26,6 +27,20 @@
 
   #mobile-menu.hidden {
     transform: translateX(100%);
+  }
+
+  .fader {
+    background-color: transparent;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    transition: background-color 0.25s ease-out;
+  }
+
+  .bg-fade-in {
+    background-color: #ffffffa6;
   }
 
   .active-nav-link {
